--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "guzzlehttp/guzzle": "6.*"
     },
     "autoload": {
         "classmap": [
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Amelia\\Money\\":"app/Library/money/src"
         }
     },
     "autoload-dev": {
